# python-uv

./: README.md  pyproject.toml  ruff.toml  run.py
.devcontainer/: devcontainer.json
src/: main.py
src/project/: __init__.py  hello.py  pytest_test.py
src/python_uv/: __init__.py  pytest_test.py
src/sandbox/: main.py
