[project]
name = "python-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "shoji", email = "shoji.kobayashi.0125@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.11.9",
]
